--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 <html>
 <head>
-<title> Jonty webpage </title>
+<title> HomePage </title>
 </head>
 	<body alink=red vlink=blue>
 	<center>
-		<svg height="180" width="500">
-  		<defs>
-    		<linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-      		<stop offset="0%"
-      		style="stop-color:rgb(255,255,0);stop-opacity:1" />
-      		<stop offset="100%"
-     		 style="stop-color:rgb(255,0,0);stop-opacity:1" />
-    		</linearGradient>
- 		 </defs>
- 		 <ellipse cx="100" cy="70" rx="85" ry="55" fill="url(#grad1)" />
-  		<text fill="#ffffff" font-size="45" font-family="Verdana"
- 		 x="30" y="90">JONTY</text>
-		</svg>
 <h1> Welcome to my website </h1>
 	<br>
 <h2> Here are some links to my favourite websites </h2>
