--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</A>
 	<br>
 	<br>
-<A href = http://www.dpspatna.com/ target= _blank> <img src=dps.jpg>
+<A href = http://www.dpspatna.com/ target= _blank> <img src=Dps.jpg>
 	<br>
 	<br>
 <b>DPS PATNA</b> 
